--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -22,213 +22,14 @@ $secondary: #3fa9f5;
 $info: #b53027;
 
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
 
 $font-family-sans-serif: 'Raleway', sans-serif;
 
 @import "bootstrap/bootstrap";
 
+// import Pendigital sass
+// topBar
+@import "pendigital/factory_topBar";
+
 /* Custom CSS rules come here */
-// start pd-topBar-1
-.pd-topBar-1 {
-    border-bottom: 1px solid $secondary;
-
-    a {
-        display: inline-block;
-        font-size: 0.8rem;
-        text-decoration: none;
-        transition: transform 0.4s;
-    }
-
-    a:hover {
-        transform: scale(1.05);
-    }
-
-    .pd-topBar-1-social-icon {
-        transition: transform 0.4s;
-
-        &:hover {
-            transform: scale(1.3);
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .pd-topBar-1 {
-        display: none;
-    }
-}
-
-// end pd-topBar-1
-// start pd-topBar-2
-.pd-topBar-2 {
-    a {
-        color: $white;
-        display: inline-block;
-        font-size: 0.8rem;
-        text-decoration: none;
-        transition: transform 0.4s;
-    }
-
-    a:hover {
-        transform: scale(1.05);
-    }
-
-    .pd-topBar-1-social-icon {
-        transition: transform 0.4s;
-
-        &:hover {
-            transform: scale(1.3);
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .pd-topBar-2 {
-        display: none;
-    }
-}
-
-// end pd-topBar-2
-// start pd-topBar-3
-.pd-topBar-3 {
-    // use https://cssgradient.io/
-    background: linear-gradient(0deg, rgba(67,58,108,1) 0%, rgba(67,58,108,1) 84%, rgba(67,58,108,0.8995973389355743) 100%);
-
-    a {
-        color: $white;
-        display: inline-block;
-        font-size: 0.8rem;
-        text-decoration: none;
-        transition: transform 0.4s;
-    }
-
-    a:hover {
-        transform: scale(1.05);
-    }
-
-    .pd-topBar-1-social-icon {
-        transition: transform 0.4s;
-
-        &:hover {
-            transform: scale(1.3);
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .pd-topBar-3 {
-        display: none;
-    }
-}
-
-// end pd-topBar-3
-// start pd-topBar-4
-.pd-topBar-4 {
-    border-top: 1px solid $gray-300;
-    border-bottom: 1px solid $gray-300;
-
-    a {
-        display: inline-block;
-        font-size: 0.7rem;
-        text-decoration: none;
-        transition: transform 0.4s;
-    }
-
-    .pd-topBar-4-social-icon {
-        transition: transform 0.4s;
-
-        &:hover {
-            transform: scale(1.3);
-        }
-    }
-
-    a:hover:not(.pd-topBar-4-btn):not(.pd-topBar-4-social-icon) {
-        transform: scale(1.05);
-    }
-
-    .pd-topBar-4-btn {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-transform: uppercase;
-        color: $white;
-        font-weight: 700;
-        background-color: $info;
-        transition: background-color 0.4;
-        cursor: pointer;
-
-        span {
-            transition: transform 0.4s;
-        }
-
-        &:hover {
-            background-color: darken($info, 10%);
-
-            span {
-                transform: scale(1.06);
-            }
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .pd-topBar-4 {
-        display: none;
-    }
-}
-
-// end .pd-topBar-4
-// start pd-topBar-5
-.pd-topBar-5 {
-    a {
-        display: inline-block;
-        font-size: 0.7rem;
-        text-decoration: none;
-        transition: transform 0.4s;
-        color: $white;
-    }
-
-    .pd-topBar-5-social-icon {
-        transition: transform 0.4s;
-
-        &:hover {
-            transform: scale(1.3);
-        }
-    }
-
-    a:hover:not(.pd-topBar-5-btn):not(.pd-topBar-5-social-icon) {
-        transform: scale(1.05);
-    }
-
-    .pd-topBar-5-btn {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        text-transform: uppercase;
-        color: $white;
-        font-weight: 700;
-        background-color: $info;
-        transition: background-color 0.4;
-        cursor: pointer;
-
-        span {
-            transition: transform 0.4s;
-        }
-
-        &:hover {
-            background-color: darken($info, 10%);
-
-            span {
-                transform: scale(1.06);
-            }
-        }
-    }
-}
-
-@media (max-width: 767px) {
-    .pd-topBar-5 {
-        display: none;
-    }
-}
-
-// end pd-topBar-5
