--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -6,8 +6,8 @@
 
     a {
         &:focus {
-            outline: 2px dotted $primary!important;
-            outline-offset: 2px!important;
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
         }
     }
 
@@ -40,8 +40,8 @@
             }
 
             &:focus {
-                outline: 2px dotted $primary!important;
-                outline-offset: 5px!important;
+                outline: 2px dotted $primary;
+                outline-offset: 5px;
             }
         }
     }
