--- a/bootstrap_theme/pendigital/factory_topBar.scss
+++ b/bootstrap_theme/pendigital/factory_topBar.scss
@@ -7,6 +7,11 @@
         font-size: 0.8rem;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
     }
 
     a:hover {
@@ -37,6 +42,11 @@
         font-size: 0.8rem;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
     }
 
     a:hover {
@@ -70,6 +80,11 @@
         font-size: 0.8rem;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
     }
 
     a:hover {
@@ -102,6 +117,11 @@
         font-size: 0.7rem;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
     }
 
     .pd-topBar-4-social-icon {
@@ -138,6 +158,11 @@
                 transform: scale(1.06);
             }
         }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: -2px;
+        }
     }
 }
 
@@ -156,6 +181,11 @@
         text-decoration: none;
         transition: transform 0.4s;
         color: $white;
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
     }
 
     .pd-topBar-5-social-icon {
@@ -192,6 +222,11 @@
                 transform: scale(1.06);
             }
         }
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: -2px;
+        }
     }
 }
 
@@ -202,17 +237,22 @@
 }
 
 // end pd-topBar-5
-
 // start pd-topBar-6
 .pd-topBar-6 {
-	border-top: 1px solid $gray-300;
-	border-bottom: 1px solid $gray-300;
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
     a {
         display: inline-block;
         font-size: 0.7rem;
-		font-weight: 700;
+        font-weight: 700;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
     }
 
     .pd-topBar-6-social-icon {
@@ -234,8 +274,8 @@
         font-weight: 700;
         transition: background-color 0.4;
         cursor: pointer;
-		border-left: 1px solid $gray-300;
-		border-right: 1px solid $gray-300;
+        border-left: 1px solid $gray-300;
+        border-right: 1px solid $gray-300;
 
         span {
             transition: transform 0.4s;
@@ -248,6 +288,11 @@
                 transform: scale(1.06);
             }
         }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: -2px;
+        }
     }
 }
 
@@ -258,17 +303,22 @@
 }
 
 // end pd-topBar-6
-
 // start pd-topBar-7
 .pd-topBar-7 {
-	border-top: 1px solid $gray-300;
-	border-bottom: 1px solid $gray-300;
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
     a {
         display: inline-block;
         font-size: 0.7rem;
-		font-weight: 700;
+        font-weight: 700;
         text-decoration: none;
         transition: transform 0.4s;
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
     }
 
     p {
@@ -288,6 +338,12 @@
     a:hover:not(.pd-topBar-7-btn):not(.pd-topBar-7-social-icon) {
         transform: scale(1.05);
     }
+
+    .btn {
+        &:focus {
+            box-shadow: none;
+        }
+    }
 }
 
 @media (max-width: 767px) {
@@ -295,18 +351,24 @@
         display: none;
     }
 }
-// end pd-topBar-7
 
+// end pd-topBar-7
 // start pd-topBar-8
 .pd-topBar-8 {
     border-bottom: 1px solid $gray-200;
+
+    a {
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
 
     p {
         font-family: 'Zilla Slab', serif;
         font-size: 1rem;
         margin-bottom: 0px;
     }
-
 }
 
 @media (max-width: 767px) {
@@ -316,9 +378,7 @@
 }
 
 // end pd-topBar-8
-
 // start pd-topBar-9
-
 .pd-topBar-9 {
     border-bottom: 1px solid $gray-200;
 
@@ -330,11 +390,8 @@
 
         a {
             color: $white;
-
         }
     }
-
-
 }
 
 @media (max-width: 767px) {
@@ -342,4 +399,5 @@
         display: none;
     }
 }
+
 // end pd-topBar-9
