working on nav bars

--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -1,3 +1,4 @@
+// start pd-mainNav-1
 .pd-mainNav-1 {
     box-shadow: inset 0px -6px 18px rgba(210, 210, 210, 0.25);
     border-bottom: 2px solid $info;
@@ -44,6 +45,13 @@
                 outline-offset: 5px;
             }
         }
+
+        a.pd-pageActive-1 {
+            background: $info;
+            border-radius: 4px;
+            padding: 10px;
+            color: $white;
+        }
     }
 
     .pd-mainNav-hamburger-1 {
@@ -84,6 +92,10 @@
         }
     }
 
+    .dropdown-item.pd-pageActive-1 {
+        border-radius: 0!important;
+    }
+
     .btn {
         text-transform: uppercase;
         font-weight: 700;
@@ -100,3 +112,243 @@
     }
 }
 
+// end pd-mainNav-1
+// start pd-mainNav-2
+.pd-mainNav-2 {
+    box-shadow: inset 0px -6px 18px rgba(210, 210, 210, 0.25);
+    border-bottom: 2px solid $info;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    a {
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+
+    nav {
+        height: 100%;
+    }
+
+    .pd-mainNav-inner-2 {
+        display: none;
+        height: 100%;
+
+        @include media-breakpoint-up(md) {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+        }
+
+        a {
+            padding-left: 16px;
+            padding-right: 16px;
+            font-weight: 700;
+            text-decoration: none;
+            font-size: 0.9rem;
+            color: $primary;
+            transition: color 0.4s;
+
+            &:hover {
+                color: lighten($primary, 20);
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 5px;
+            }
+
+            &:last-child {
+                padding-right: 0px;
+            }
+        }
+
+        a.pd-pageActive-2 {
+            background: $info;
+            border-radius: 4px;
+            padding: 10px;
+            color: $white;
+        }
+    }
+
+    .pd-mainNav-hamburger-2 {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+    }
+
+    .dropdown-menu {
+        border: none;
+        background: $secondary;
+        border-radius: 3px;
+    }
+
+    .dropdown-item {
+        color: $white!important;
+        font-size: 0.8rem;
+        text-transform: uppercase;
+        border-bottom: 1px solid $white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background-color: $secondary;
+        transition: background-color 0.4s!important;
+
+        &:hover {
+            background-color: darken($secondary, 10);
+        }
+
+        &:focus {
+            outline: 2px dotted $white!important;
+            outline-offset: -6px!important;
+        }
+    }
+
+    .dropdown-item.pd-pageActive-2 {
+        border-radius: 0!important;
+    }
+
+    .btn {
+        text-transform: uppercase;
+        font-weight: 700;
+        letter-spacing: 1.6px;
+        font-size: 0.7rem!important;
+        padding: 8px 20px 8px 20px;
+        border-radius: 3px;
+        margin-left: 10px;
+        color: $white!important;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
+
+// end pd-mainNav-2
+// start pd-mainNav-3
+.pd-mainNav-3 {
+    box-shadow: inset 0px -6px 18px rgba(210, 210, 210, 0.25);
+    border-bottom: 2px solid $info;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    a {
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 2px;
+        }
+    }
+
+    nav {
+        height: 100%;
+    }
+
+    .pd-mainNav-inner-3 {
+        display: none;
+        height: 100%;
+
+        @include media-breakpoint-up(md) {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+
+            div {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-around;
+            }
+        }
+
+        a {
+            padding-left: 16px;
+            padding-right: 16px;
+            font-weight: 700;
+            text-decoration: none;
+            font-size: 0.9rem;
+            color: $primary;
+            transition: color 0.4s;
+
+            &:hover {
+                color: lighten($primary, 20);
+            }
+
+            &:focus {
+                outline: 2px dotted $primary;
+                outline-offset: 5px;
+            }
+        }
+
+        a.pd-pageActive-3 {
+            background: $info;
+            border-radius: 4px;
+            padding: 10px;
+            color: $white;
+        }
+    }
+
+    .pd-mainNav-hamburger-3 {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+    }
+
+    .dropdown-menu {
+        border: none;
+        background: $secondary;
+        border-radius: 3px;
+    }
+
+    .dropdown-item {
+        color: $white!important;
+        font-size: 0.8rem;
+        text-transform: uppercase;
+        border-bottom: 1px solid $white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        background-color: $secondary;
+        transition: background-color 0.4s!important;
+
+        &:hover {
+            background-color: darken($secondary, 10);
+        }
+
+        &:focus {
+            outline: 2px dotted $white!important;
+            outline-offset: -6px!important;
+        }
+    }
+
+    .dropdown-item.pd-pageActive-3 {
+        border-radius: 0!important;
+    }
+
+    .btn {
+        text-transform: uppercase;
+        font-weight: 700;
+        letter-spacing: 1.6px;
+        font-size: 0.7rem!important;
+        padding: 8px 20px 8px 20px;
+        border-radius: 3px;
+        margin-left: 10px;
+        color: $white!important;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+}
