--- a/bootstrap_theme/pendigital/factory_hamburgers.scss
+++ b/bootstrap_theme/pendigital/factory_hamburgers.scss
@@ -41,6 +41,18 @@
     background-color: $primary;
 }
 
+.hamburger.is-active .hamburger-inner.hamburger-inverted {
+    background-color: $white;
+
+    &:before {
+        background-color: $white;
+    }
+
+    &:after {
+        background-color: $white;
+    }
+}
+
 .hamburger-box {
     width: 40px;
     height: 24px;
@@ -65,6 +77,18 @@
     transition-property: transform;
     transition-duration: 0.15s;
     transition-timing-function: ease;
+}
+
+.hamburger-inner.hamburger-inverted {
+    background-color: $white;
+
+    &:before {
+        background-color: $white;
+    }
+
+    &:after {
+        background-color: $white;
+    }
 }
 
 .hamburger-inner::before,
