--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -665,3 +665,250 @@
 }
 
 // end pd-mainNav-5
+// start pd-mainNav-6
+.pd-mainNav-6 {
+    background-color: $primary;
+    padding-top: 2px;
+    padding-bottom: 2px;
+
+    a {
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
+    }
+
+    nav {
+        height: 100%;
+    }
+
+    .pd-mainNav-inner-6 {
+        display: none;
+        height: 100%;
+
+        @include media-breakpoint-up(md) {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+        }
+
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+
+            li {
+                a {
+                    padding-left: 16px;
+                    padding-right: 16px;
+                    margin-left: 5px;
+                    margin-right: 5px;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    text-decoration: none;
+                    font-size: 0.8rem;
+                    color: #f7f7f7;
+                    transition: color 0.4s;
+
+                    &:hover {
+                        color: darken(#ebebeb, 1);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $primary;
+                        outline-offset: 5px;
+                    }
+                }
+
+                a.pd-dropdown-toggle {
+                    white-space: nowrap;
+                    display: inline-block;
+
+                    .pd-dropdown-caret {
+                        margin-left: 4px;
+                        content: url(/images/design-assets/icon-caret-white.svg);
+                    }
+                }
+
+                ul.pd-dropdown-menu {
+                    position: absolute;
+                    display: none;
+                    flex-direction: column;
+                    border: none;
+                    background: $secondary;
+                    border-radius: 3px;
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                }
+
+                ul.pd-dropdown-menu.show {
+                    display: block;
+                    flex-direction: column;
+                    position: absolute;
+                    inset: 0px auto auto 0px;
+                    margin: 0px;
+                    transform: translate3d(5px, 22px, 0px);
+                }
+
+                // start paste
+                ul li {
+                    width: 100%;
+                }
+
+                ul li a.pd-dropdown-item {
+                    display: block;
+                    color: $white!important;
+                    margin-left: 0px!important;
+                    margin-right: 0px!important;
+                    font-size: 0.8rem;
+                    text-transform: uppercase;
+                    border-bottom: 1px solid $white;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                    background-color: $secondary;
+                    transition: background-color 0.4s!important;
+
+                    &:hover {
+                        background-color: darken($secondary, 10);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $white!important;
+                        outline-offset: -6px!important;
+                    }
+                }
+
+                .dropdown-item.pd-pageActive-6 {
+                    background: $info!important;
+                    border: none!important;
+                    border-radius: 0!important;
+                }
+
+                // end paste
+            }
+
+            li.pd-dropdown {
+                position: relative;
+            }
+        }
+
+        a.pd-pageActive-6 {
+            background: $info;
+
+            // border: 1px solid $white;
+            border-radius: 4px;
+            padding: 10px;
+            color: $white;
+        }
+    }
+
+    .pd-mainNav-inner-6.open {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-top: 40px;
+        background: linear-gradient(46.3deg,#5137c4 11.79%,#0071f6 144.33%);
+        box-shadow: rgba(0,0,0,.1) 0 10px 15px -3px,rgba(0,0,0,.05) 0 4px 6px -2px;
+
+        ul {
+            flex-direction: column;
+
+            li {
+                margin-top: 10px;
+                margin-bottom: 10px;
+
+                ul.pd-dropdown-menu.show {
+                    display: block;
+                    position: static;
+                }
+            }
+        }
+    }
+
+    .pd-mainNav-hamburger-6 {
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+
+        @include media-breakpoint-up(md) {
+            display: none;
+        }
+    }
+
+    .btn {
+        text-transform: uppercase;
+        font-weight: 700;
+
+        // letter-spacing: 1.6px;
+        font-size: 0.7rem!important;
+        padding: 12px 20px!important;
+        border-radius: 10px;
+        margin-left: 10px;
+        color: $white!important;
+
+        &:focus {
+            box-shadow: none;
+        }
+    }
+
+    .btn-outline-light {
+        border: 1px solid #ebebeb!important;
+        transition: background .2s, border .2s, color .2s, box-shadow .2s!important;
+    }
+
+    .btn-outline-light {
+        &:hover {
+            background: #ebebeb;
+            border: darken($gray-300, 1);
+            color: #383838!important;
+            box-shadow: rgba(0,0,0,.1) 0 10px 15px -3px,rgba(0,0,0,.05) 0 4px 6px -2px;
+        }
+    }
+
+    transition: all .2s;
+}
+
+.pd-mainNav-6.pd-mainNav-6-inverted {
+    box-shadow: 0 10px 5px -5px rgba(0,0,0,.15);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1000;
+
+    #logo {
+        content: url(/images/design-assets/fort-logo.svg);
+    }
+
+    background-color: #f7f7f7;
+
+    .pd-mainNav-inner-6 {
+        a {
+            color: #222222;
+        }
+
+        a.pd-pageActive-6 {
+            color: #ebebeb;
+        }
+
+        .btn-outline-light {
+            border: 1px solid #222222!important;
+            color: #222222!important;
+            background: transparent;
+        }
+    }
+}
+
+// end pd-mainNav-6
