Added some space for new functions

--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -731,6 +731,10 @@
                     white-space: nowrap;
                     display: inline-block;
 
+                    > * {
+                        pointer-events: none;
+                    }
+
                     .pd-dropdown-caret {
                         margin-left: 4px;
                         content: url(/images/design-assets/icon-caret-white.svg);
