Sorted navs in mobile

--- a/bootstrap_theme/pendigital/factory_mainNavs.scss
+++ b/bootstrap_theme/pendigital/factory_mainNavs.scss
@@ -814,8 +814,13 @@
             justify-content: center;
 
             img {
-                margin-left: 8px;
-                margin-right: 8px;
+                margin-left: 10px;
+                margin-right: 10px;
+                transition: transform 0.4s;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
 
             @include media-breakpoint-up(md) {
