Added new images and pages for heroes

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -32,5 +32,6 @@ $font-family-sans-serif: 'Raleway', sans-serif;
 @import "pendigital/factory_topBar";
 @import "pendigital/factory_mainNavs";
 @import "pendigital/factory_hamburgers";
+@import "pendigital/factory_heroes";
 
 /* Custom CSS rules come here */
