--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -27,6 +27,8 @@
         }
 
         img.pd-hero-image-1 {
+            opacity: 0;
+            transition: opacity .4s;
             width: 100%;
             background: rgba(255,255,255,.176);
             border-radius: 15px;
@@ -37,6 +39,10 @@
             @media (min-width: 768px) and (max-width: 1199px) {
                 width: 700px;
             }
+        }
+
+        img.pd-hero-image-1.pd-hero-image-1-loaded {
+            opacity: 1;
         }
     }
 
@@ -52,6 +58,24 @@
             }
         }
     }
+
+    .pd-hero-1-loader {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        left: 0;
+    }
+
+    .pd-hero-1-loader.pd-hero-1-remove-loader {
+        display: none;
+    }
 }
+
+
 	
 
